--- a/docs/chi-examples/11-local-storage-02-advanced-host-path.yaml
+++ b/docs/chi-examples/11-local-storage-02-advanced-host-path.yaml
@@ -18,6 +18,8 @@ apiVersion: "clickhouse.altinity.com/v1"
 kind: "ClickHouseInstallation"
 metadata:
   name: "volume-hostpath"
+  labels:
+    app: chop
 spec:
   defaults:
     templates:
